# ezkl-verifier

./: Cargo.toml  LICENSE.md  README.md  ReusableVerifier.md
.github/workflows/: ci.yml
contracts/: VerifierWrapper.sol
examples/: separately.rs
src/: codegen.rs  evm.rs  lib.rs  test.rs  transcript.rs
src/codegen/: evaluator.rs  pcs.rs  template.rs  util.rs
templates/: Halo2Verifier.sol  Halo2VerifierReusable.sol  Halo2VerifyingArtifact.sol  Halo2VerifyingKey.sol
